# MineVKR

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CRITICAL.txt  Dictionary.txt  LICENSE.md  README.md  Ray-Tracing.txt  bin  build.gradle  build.gradle.patch.txt  favorites_5_1_20.html  gradle.properties  how-to-planned.txt  include  lib  lib-mingw-w64  lib-vc2019  prebuilt  shaders-sdk  tasklist.txt
config/checkstyle/: checkstyle.xml
devnotes/: CRITICAL.txt  Dictionary.txt  Entity-Plan.txt  Planned.txt  Ray-Tracing.txt  favorites_5_1_20.html
generator/: generate.cmd  lwjgl-generator.js  org.lwjgl3.json
gradle/wrapper/: gradle-wrapper.properties
include/: .vscode  GLFW  JiviX  KHR  glad  glm  misc  vkh  vkt2  vma  volk  vulkan
include/JiviX/: JiviX.hpp  config.hpp  context.hpp  driver.hpp  material.hpp  mesh-advanced.hpp  mesh.hpp  node.hpp  renderer.hpp  thread.hpp
include/glad/: glad.h
include/vkh/: bitfields.hpp  enums.hpp  helpers.hpp  structures.hpp
include/vkt2/: fw.hpp  structs.hpp  utils.hpp  vector.hpp
include/vulkan/: liballoc.natvis  libcore.natvis  vk_mem_alloc.h
include/vulkan/vulkan/: intrinsic.natvis  libstd.natvis
lib/: JiviX.lib  OGLCompiler.lib  OSDependent.lib  SPVRemapper.lib  shaderc_util.lib  spirv-cross-c-shared.lib  spirv-cross-c.lib  spirv-cross-cpp.lib
native/include/: .vscode  GLFW  JiviX  KHR  epoxy  glad  glbinding  glm  misc  spirv  vkt3  vma  vulkan  xvk
native/include/JiviX/: JiviX.hpp  context.hpp  core.hpp  driver.hpp  material.hpp  mesh.hpp  node.hpp  renderer.hpp  thread.hpp
native/include/JiviX/JVI/: JiviX.hpp  bview-set.hpp  config.hpp  context.hpp  driver.hpp  material.hpp  mesh-binding.hpp  mesh-input.hpp  node.hpp  readme.md  renderer.hpp  thread.hpp
native/include/glbinding/: glbinding_features.h
native/include/misc/: tinyexr.h
native/lib/: jniJiviXBase - Hardlink.lib  jniJiviXBase.exp  jniJiviXBase.lib  jniJiviXCore.exp  jniJiviXCore.lib
native/lib/pkgconfig/: glfw3.pc
options/: README.md  options.txt  optionsof.txt  optionsshaders.txt
prebuilt/intrusive/turing/rtrace/: background.frag.spv  background.vert.spv  pathtrace.rchit.spv  pathtrace.rgen.spv  pathtrace.rmiss.spv  quad.comp.spv  rasterize.frag.spv  rasterize.geom.spv  rasterize.vert.spv  render.frag.spv  render.vert.spv  resample.frag.spv  resample.vert.spv
prebuilt/intrusive/universal/rtrace/: background.frag.spv  background.vert.spv  pathtrace.rchit.spv  pathtrace.rgen.spv  pathtrace.rmiss.spv  rasterize.frag.spv  rasterize.vert.spv  render.frag.spv  render.vert.spv  resample.frag.spv  resample.vert.spv  shadows.rchit.spv  shadows.rmiss.spv
remappedSrc/com/helixd2s/jivix/: VectorTest.java
remappedSrc/com/helixd2s/minevkr/: ReflectionUtil.java
saves/RT_6/: level.dat_old
saves/RT_6/advancements/: 48c2e6c7-8875-31cc-9a01-be7eaa5f9386.json  da6fa5b1-bd84-361d-8771-656d46818daa.json
saves/RT_6/playerdata/: da6fa5b1-bd84-361d-8771-656d46818daa.dat_old
saves/RT_6/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
saves/RT_6/stats/: 48c2e6c7-8875-31cc-9a01-be7eaa5f9386.json  da6fa5b1-bd84-361d-8771-656d46818daa.json
shaders-sdk/: build-for-amd.ps1  build-for-intel8.ps1  build-for-nvidia.ps1  build-for-radv.ps1  build-for-turing.ps1  build-for-universal.ps1  build-for-vega.ps1  readme.md  shaders-list.ps1  tips.txt  vert.spv
shaders-sdk/include/: ballotlib.glsl  driver.glsl  mathlib.glsl
shaders-sdk/rtrace/: background.frag  background.vert  driver.glsl  frag.spv  index.glsl  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  rasterize.frag  rasterize.geom  rasterize.vert  rchit.spv  render.frag  render.vert  resample.frag  resample.vert  rgen.spv  rmiss.spv  turing.conf  vert.spv
src/examples/triangle/: main.cpp
src/jivix/: JiviX.h
src/jivix/windows-x86_64/: jniFooJiviX.lib  jniJiviX.lib
src/legacy/jivix/: CMakeLists.txt  FooJiviX.java  JiviX.java  jniFooJiviX.h
src/legacy/jivix/windows-x86_64/: jniFooJiviX.exp  jniJiviX.exp
src/legacy/test/: glad.c  main.cpp  volk.c
src/legacy/triangle/: CMakeLists.txt  bin  include  lib  lib-mingw-w64  lib-vc2019
src/legacy/triangle/source/: glad.c  main.cpp
src/legacy/triangle/source-lib/: main-GL.cpp  main-two.cpp
src/main/java/: CMakeLists.txt  CMakeSettings.json  bin  build  generate.bat  include  jnijavacpp.cpp  lib  lib-mingw-w64  lib-vc2019
src/main/java/include/: .vscode  GLFW  JiviX  KHR  exr  glad  glbinding  glm  misc  spirv  vkh  vkt2  vkt3  vma  volk  vulkan  xvk
src/main/java/lib/: cmake  glbinding.exp  glbinding.lib  glfw3.lib  glfw3dll.lib  jniJiviXBase.lib  pkgconfig  shaderc_shared.lib  spirv-cross-hlsl.lib  spirv-cross-reflect.lib  (+3 more)
src/main/resources/: fabric.mod.json  modid.mixins.json  readme.md
testing/gl-shaders/: render.frag  render.vert  tf-quad.geom  tf-quad.vert  tf.geom  tf.vert
testing/options/: README.md  options.txt  optionsof.txt  optionsshaders.txt
(+169 files in other folders)
